[gd_scene load_steps=2 format=3 uid="uid://bk3m8qr2nfhw4"]

[ext_resource type="Script" path="res://MetaUpgradeMenu.gd" id="1_meta"]

[node name="MetaUpgradeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_meta")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.035, 0.03, 0.07, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 30.0
offset_top = 25.0
offset_right = -30.0
offset_bottom = 85.0
grow_horizontal = 2
theme_override_constants/separation = 25

[node name="BackButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(110, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "返回"

[node name="TitleLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.85, 1, 1)
theme_override_colors/font_shadow_color = Color(0.4, 0.2, 0.6, 0.4)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "局外升级"
vertical_alignment = 1

[node name="CurrencyContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 2

[node name="IconLabel" type="Label" parent="TopBar/CurrencyContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.5, 1, 1)
theme_override_font_sizes/font_size = 24
text = "灵魂碎片:"
vertical_alignment = 1

[node name="CurrencyLabel" type="Label" parent="TopBar/CurrencyContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 26
text = "0"
vertical_alignment = 1

[node name="MainContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 100.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 220

[node name="LeftPanel" type="PanelContainer" parent="MainContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/MarginContainer"]
layout_mode = 2

[node name="CategoryLabel" type="Label" parent="MainContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "升级类别"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CategoryContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="RightPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="UpgradeScroll" type="ScrollContainer" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="UpgradeGrid" type="GridContainer" parent="MainContainer/RightPanel/UpgradeScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 18
theme_override_constants/v_separation = 18
columns = 4

[node name="DetailPanel" type="PanelContainer" parent="MainContainer/RightPanel"]
visible = false
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/RightPanel/DetailPanel"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/RightPanel/DetailPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="NameLabel" type="Label" parent="MainContainer/RightPanel/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 1, 1)
theme_override_font_sizes/font_size = 26
text = "升级名称"

[node name="DescLabel" type="Label" parent="MainContainer/RightPanel/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.78, 0.88, 1)
theme_override_font_sizes/font_size = 15
text = "升级描述..."
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="MainContainer/RightPanel/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MainContainer/RightPanel/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "等级: 0 / 10"

[node name="EffectLabel" type="Label" parent="MainContainer/RightPanel/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "效果: +0 → +10"

[node name="CostLabel" type="Label" parent="MainContainer/RightPanel/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "升级花费: 100 灵魂碎片"

[node name="PurchaseButton" type="Button" parent="MainContainer/RightPanel/DetailPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 48)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 18
text = "升级"
